# CosyVoice-ComfyUI

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
cosyvoice/cli/: frontend.py
plugins/: spk2info_tool.py
web/js/: uploadSRT.js
workflows/: 3s_clone_workflow.json  3sclone_workflow.json  base_workflow.json  cross_lingual_workflow.json  cross_workflow.json  instruct_workflow.json
workflows/dubbing/: 3s_workflow.json  3sclone_workflow.json  base_dubb_workflow.json  base_workflow.json  en_test.srt  zh_test.srt
