[project]
name = "cosyvoice-comfyui"
description = "a comfyui custom node for [a/CosyVoice](https://github.com/FunAudioLLM/CosyVoice)"
version = "1.0.0"
license = "LICENSE"
dependencies = ["conformer", "deepspeed; sys_platform == 'linux'", "diffusers", "grpcio", "grpcio-tools", "hydra-core", "HyperPyYAML", "inflect", "librosa", "lightning", "matplotlib", "modelscope", "networkx", "omegaconf", "onnxruntime-gpu; sys_platform == 'linux'", "onnxruntime; sys_platform == 'darwin' or sys_platform == 'win32'", "openai-whisper", "protobuf", "pydantic", "rich", "soundfile", "tensorboard", "wget", "gdown", "pyarrow", "jieba", "pypinyin"]

[project.urls]
Repository = "https://github.com/AIFSH/CosyVoice-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "CosyVoice-ComfyUI"
Icon = ""
